Fix a crash in LocalDiscoveryUIHandler.

GetCloudPrintProxyService() can return NULL in guest mode.

BUG=607426

Review-Url: https://codereview.chromium.org/1928013003
Cr-Commit-Position: refs/heads/master@{#390697}

Former-commit-id: 53ded7edaf64916e44fe6f16f025b9f86a178df1